# pipepost

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
examples/: demo.py  generate_demo_gif.py  generate_demo_svg.py  pipepost.yaml
examples/openclaw-skill/: SKILL.md
flows/: changelog-translate.yaml  go-lesson.yaml  hn.yaml  morning-digest.yaml  process-queue.yaml  reddit.yaml  scout.yaml  til.yaml  tool-review.yaml  translate-anime.yaml  translate-hn.yaml  translate-trends.yaml  weekly-digest.yaml
pipepost/: __init__.py  batch.py  cli.py  exceptions.py  metrics.py
pipepost/bot/: __init__.py  curator.py
pipepost/config/: __init__.py  flow_builder.py  loader.py
pipepost/core/: __init__.py  context.py  flow.py  registry.py  step.py
pipepost/destinations/: __init__.py  base.py  markdown.py  openclaw.py  telegram.py  webhook.py
pipepost/flows/: __init__.py  default.py
pipepost/runners/: __init__.py  changelog_translate.py  go_lesson.py  process_queue.py  til.py  translate_api.py
pipepost/sources/: __init__.py  aicraft_tils.py  base.py  hackernews.py  reddit.py  rss.py  search.py
pipepost/steps/: __init__.py  adapt.py  dedup.py  fanout.py  fetch.py  filter.py  images.py  publish.py  quality_gate.py  rewrite.py  score.py  scout.py  transform.py  translate.py  validate.py
pipepost/storage/: __init__.py  sqlite.py
pipepost/utils/: cache.py  retry.py  slug.py
tests/: conftest.py  test_adapt.py  test_batch.py  test_bot.py  test_cache.py  test_cli.py  test_config.py  test_context.py  test_dedup.py  test_exceptions.py  test_fanout.py  test_fetch.py  test_filter.py  test_flow.py  test_flow_builder.py  test_formatting_e2e.py  test_images.py  test_integration.py  test_markdown.py  test_metrics.py  test_openclaw.py  test_publish.py  test_quality_gate.py  test_registry.py  test_rewrite.py  test_score.py  test_scout.py  test_sources.py  test_step.py  test_storage.py  test_telegram.py  test_transform.py  test_translate.py  test_validate.py  test_webhook.py
