[project]
name = "pipepost"
version = "0.1.0"
description = "Open-source AI content curation pipeline — scout, translate, publish"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
authors = [{name = "Denis Sultanov", email = "denis@denishub.dev"}]
keywords = ["ai", "content", "curation", "translation", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "litellm>=1.30",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "respx",
    "pytest-cov",
    "types-PyYAML",
    "types-beautifulsoup4",
]

[project.scripts]
pipepost = "pipepost.cli:main"

[tool.setuptools.packages.find]
include = ["pipepost*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
